--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
      <div style="text-align: center;">
         <img src="img1.jpg" alt="Imagen de la NASA" class="image" />
     </div>
-    <h2>Lorem descripción</h2>
+    <h2>La Tierra Iluminada: La Red de Conexiones Humanas desde el Espacio</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
         <a href="page2.html">suscipit quidem?</a> Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
