--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
     <div style="text-align: center;">
         <img src="img2.jpg" alt="Sala de servidores" class="image"/>
     </div>
-    <h2>Lorem descripción</h2>
+    <h2>El Corazón Digital: Centros de Datos que Sostienen la Era de la Información</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
         suscipit quidem? Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
         soluta?</p>
