--- a/page2.html
+++ b/page2.html
@@ -15,9 +15,7 @@
         <img src="img2.jpg" alt="Sala de servidores" class="image"/>
     </div>
     <h2>El Corazón Digital: Centros de Datos que Sostienen la Era de la Información</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur minus quia fugiat quae cumque consequatur
-        suscipit quidem? Cupiditate, quos debitis recusandae sequi, fugit quis nihil omnis atque inventore consequatur
-        soluta?</p>
+    <p>La imagen muestra un centro de datos moderno, con múltiples racks llenos de servidores, cables de conexión y luces de estado que parpadean sin cesar. Estos equipos forman parte de la infraestructura que hace posible el almacenamiento, procesamiento y transmisión de datos a escala global.</p>
     <a href="page1.html" title="Imagen anterior" class="link-button">&lt;= Imagen anterior</a>
 </body>
 
